--- a/scripts/dataset_curation/MERLIN_remove_duplicates.Rmd
+++ b/scripts/dataset_curation/MERLIN_remove_duplicates.Rmd
@@ -32,7 +32,7 @@ metadata <- readRDS("./MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_
 qcd <- readRDS("./MERLIN-prolonged-colonization-ms/data/QCD/master_qc_all.RDS") 
 ```
 
-# Get ESCRE qc-passing genome data
+# Get QC-passing ESCrE genome data
 ```{r}
 get_escre_data <- function(passing_genomes){
   genomes <- str_split(passing_genomes,pattern = ";") %>% unlist %>% as.vector()
@@ -65,7 +65,6 @@ paste0("Number of unique QC passing duplicates duplicates: ", length(metadata_du
 
 # Distance data
 ## Assembly
-
 ```{r}
 setwd("~/Desktop/gl_merlin/Sequence_data/variant_calling/2025-03-13_SNPKIT_all/")
 # C freundii
@@ -95,7 +94,6 @@ sliquefaciens_fa <- read.dna("./sliquefaciens/2025_03_16_14_13_11_core_results/g
 ```
 
 ## DNA Matrix
-
 ```{r}
 dna_matrix <- function(fa,reference){
 ape::dist.dna(x = fa, # DNAbin object as read in above
@@ -129,7 +127,7 @@ duplicates_qc <- lapply(duplicates,FUN=function(x){
 ## Choice: Keep 128
 ```{r}
 paste0("Duplicate of interest: ",duplicates[1])
-MERLIN_128_MERLIN_45 <- duplicates_qc[[duplicates[1]]]
+MERLIN_128_MERLIN_45 <- duplicates_qc[["MERLIN_128;MERLIN_45"]]
 
 paste0("Species: ", unique(MERLIN_128_MERLIN_45$Species))
 
@@ -140,7 +138,7 @@ paste0("Keep MERLIN_128")
 MERLIN_128_MERLIN_45 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_45")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[1],gsub("MERLIN_45","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_128;MERLIN_45",gsub("MERLIN_45","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 2. MERLIN_148 MERLIN_193
@@ -148,7 +146,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[1],gsub("MERLIN_
 ## Choice: Keep 193
 ```{r}
 paste0("Duplicate of interest: ",duplicates[2])
-MERLIN_148_MERLIN_193 <- duplicates_qc[[duplicates[2]]]
+MERLIN_148_MERLIN_193 <- duplicates_qc[["MERLIN_148;MERLIN_193"]]
 
 paste0("Species: ",unique(MERLIN_148_MERLIN_193$Species))
 
@@ -159,7 +157,7 @@ paste0("Keep MERLIN_193")
 MERLIN_148_MERLIN_193 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_148")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[2],gsub("MERLIN_148","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_148;MERLIN_193",gsub("MERLIN_148","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 3. MERLIN_210 MERLIN_198
@@ -167,7 +165,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[2],gsub("MERLIN_
 ## Choice: Keep 210
 ```{r}
 paste0("Duplicate of interest: ",duplicates[3])
-MERLIN_210_MERLIN_198 <- duplicates_qc[[duplicates[3]]]
+MERLIN_210_MERLIN_198 <- duplicates_qc[["MERLIN_210;MERLIN_198"]]
 
 paste0("Species: ",unique(MERLIN_210_MERLIN_198$Species))
 
@@ -178,7 +176,7 @@ paste0("Keep MERLIN_210")
 MERLIN_210_MERLIN_198 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_198")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[3],gsub("MERLIN_198","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_210;MERLIN_198",gsub("MERLIN_198","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 4. MERLIN_265 MERLIN_181
@@ -186,7 +184,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[3],gsub("MERLIN_
 ## Choice: Keep 265
 ```{r}
 paste0("Duplicate of interest: ",duplicates[4])
-MERLIN_265_MERLIN_181 <- duplicates_qc[[duplicates[4]]]
+MERLIN_265_MERLIN_181 <- duplicates_qc[["MERLIN_265;MERLIN_181"]]
 
 paste0("Species: ",unique(MERLIN_265_MERLIN_181$Species))
 
@@ -197,7 +195,7 @@ paste0("Keep MERLIN_265")
 MERLIN_265_MERLIN_181 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_181")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[4],gsub("MERLIN_181","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_265;MERLIN_181",gsub("MERLIN_181","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 5. MERLIN_23 MERLIN_34
@@ -205,7 +203,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[4],gsub("MERLIN_
 ## Choice: Keep 34
 ```{r}
 paste0("Duplicate of interest: ",duplicates[5])
-MERLIN_23_MERLIN_34 <- duplicates_qc[[duplicates[5]]]
+MERLIN_23_MERLIN_34 <- duplicates_qc[["MERLIN_23;MERLIN_34"]]
 
 paste0("Species: ",unique(MERLIN_23_MERLIN_34$Species))
 
@@ -216,7 +214,7 @@ paste0("Keep MERLIN_34")
 MERLIN_23_MERLIN_34 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_23")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[[5]],gsub("MERLIN_23","",metadata$genomic_id) ,metadata$genomic_id)  
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_23;MERLIN_34",gsub("MERLIN_23","",metadata$genomic_id) ,metadata$genomic_id)  
 ```
 
 # 6. MERLIN_105 MERLIN_273
@@ -224,7 +222,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[[5]],gsub("MERLI
 ## Choice: Keep 105
 ```{r}
 paste0("Duplicate of interest: ",duplicates[6])
-MERLIN_105_MERLIN_273 <- duplicates_qc[[duplicates[6]]]
+MERLIN_105_MERLIN_273 <- duplicates_qc[["MERLIN_105;MERLIN_273"]]
 
 paste0("Species: ",unique(MERLIN_105_MERLIN_273$Species))
 
@@ -235,7 +233,7 @@ paste0("Keep MERLIN_105")
 MERLIN_105_MERLIN_273 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_273")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[6],gsub("MERLIN_273","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_105;MERLIN_273",gsub("MERLIN_273","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 7. MERLIN_13 MERLIN_19 
@@ -243,7 +241,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[6],gsub("MERLIN_
 ## Choice: Dulicate rows and split up!
 ```{r}
 paste0("Duplicate of interest: ",duplicates[7])
-MERLIN_13_MERLIN_19 <- duplicates_qc[[duplicates[7]]]
+MERLIN_13_MERLIN_19 <- duplicates_qc[["MERLIN_13;MERLIN_19"]]
 
 paste0("Species: ")
 unique(MERLIN_13_MERLIN_19$Species) 
@@ -264,7 +262,7 @@ metadata$genomic_id <- ifelse(metadata$map_name == MERLIN_13_MERLIN_19_mapname &
 ## Choice: Keep MERLIN_46
 ```{r}
 paste0("Duplicate of interest: ",duplicates[8])
-MERLIN_35_MERLIN_46 <- duplicates_qc[[duplicates[8]]]
+MERLIN_35_MERLIN_46 <- duplicates_qc[["MERLIN_35;MERLIN_46"]]
 
 paste0("Species: ",unique(MERLIN_35_MERLIN_46$Species))
 
@@ -275,7 +273,7 @@ paste0("Keep MERLIN_46")
 MERLIN_35_MERLIN_46 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_35")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[8],gsub("MERLIN_35","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_35;MERLIN_46",gsub("MERLIN_35","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 9. MERLIN_RE_3 MERLIN_289
@@ -283,7 +281,7 @@ metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[8],gsub("MERLIN_
 ## Choice: Keep MERLIN_RE_3
 ```{r}
 paste0("Duplicate of interest: ",duplicates[9])
-MERLIN_RE_3_MERLIN_289 <- duplicates_qc[[duplicates[9]]]
+MERLIN_RE_3_MERLIN_289 <- duplicates_qc[["MERLIN_RE_3;MERLIN_289"]]
 
 paste0("Species: ",unique(MERLIN_RE_3_MERLIN_289$Species))
 
@@ -294,15 +292,15 @@ paste0("Keep MERLIN_RE_3")
 MERLIN_RE_3_MERLIN_289 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_289")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[9],gsub("MERLIN_289","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_RE_3;MERLIN_289",gsub("MERLIN_289","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 10. MERLIN_234 MERLIN_233 
-## Story: They are close enough - 25 SNP different different! 
+## Story: They are close enough for the purposes of this study (i.e., 25 SNP threshold for transmission clusters)!
 ## Choice: Keep 234
 ```{r}
 paste0("Duplicate of interest: ",duplicates[10])
-MERLIN_234_MERLIN_233 <- duplicates_qc[[duplicates[10]]]
+MERLIN_234_MERLIN_233 <- duplicates_qc[["MERLIN_234;MERLIN_233"]]
 
 paste0("Species: ")
 unique(MERLIN_234_MERLIN_233$Species)
@@ -314,7 +312,7 @@ paste0("Keep MERLIN_234")
 MERLIN_234_MERLIN_233 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_233")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[10],gsub("MERLIN_233","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_234;MERLIN_233",gsub("MERLIN_233","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 11. MERLIN_120 MERLIN_287 
@@ -333,7 +331,7 @@ paste0("Keep MERLIN_287")
 MERLIN_120_MERLIN_287 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_120")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[11],gsub("MERLIN_120","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_120;MERLIN_287",gsub("MERLIN_120","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 12. MERLIN_118 MERLIN_87 
@@ -352,7 +350,7 @@ paste0("Keep MERLIN_87")
 MERLIN_118_MERLIN_87 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_118")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[12],gsub("MERLIN_118","",metadata$genomic_id) ,metadata$genomic_id) 
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_118;MERLIN_87",gsub("MERLIN_118","",metadata$genomic_id) ,metadata$genomic_id) 
 ```
 
 # 13. MERLIN_RE_8 MERLIN_294 MERLIN_61
@@ -371,8 +369,22 @@ paste0("Keep MERLIN_61")
 MERLIN_RE_8_MERLIN_294_MERLIN_61 %>% arrange(`Total_of_contigs`,-N50)  %>% gontjesr::favorite_kable()
 
 paste0("Drop MERLIN_294 & MERLIN_RE_8")
-metadata$genomic_id <- ifelse(metadata$genomic_id == duplicates[13],gsub("MERLIN_294","",metadata$genomic_id)  %>% gsub("MERLIN_RE_8","",.),metadata$genomic_id)  
+metadata$genomic_id <- ifelse(metadata$genomic_id == "MERLIN_RE_8;MERLIN_294;MERLIN_61",gsub("MERLIN_294","",metadata$genomic_id)  %>% gsub("MERLIN_RE_8","",.),metadata$genomic_id)  
 ``` 
+
+# Validate that the duplicates were dealt with
+## Expectation: No TRUE values
+```{r}
+remaining_duplicates <- names(duplicates_qc)[names(duplicates_qc) %in% metadata$genomic_id] 
+num_remaining_duplicates <- length(remaining_duplicates)
+paste0("Number of genomic_id duplicates remaining: ",num_remaining_duplicates)
+
+paste0("Remaining genomic_id values to deal with: ",paste0(remaining_duplicates,collapse=","))  
+
+if (num_remaining_duplicates > 0) {
+  stop("Did not deal with a duplicate. Fix.") 
+} 
+```
 
 # Curate the final genomic_id variable
 ## For non-ESCrE, the qc-passing IDs are provided. If no qc-passing IDs exist, the overall list of that sample's genome IDs are provided
@@ -383,6 +395,9 @@ metadata$genomic_id <- trimws(metadata$genomic_id,which = 'both',whitespace = ";
 # Add the genomic IDs for qc failing genomes that only have failing genomes
 metadata$genomic_id <- ifelse(metadata$genomic_id=='' & metadata$WGS_qc_pass_ids_num > 0,metadata$genomic_id_qc_pass,metadata$genomic_id)
 metadata$genomic_id <- ifelse(metadata$genomic_id=='' & metadata$WGS_qc_pass_ids_num == 0,metadata$Genome_ID,metadata$genomic_id)
+```
 
+# Save de duplicated
+```{r}
 saveRDS(metadata,"./MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed.RDS")
 ```
