--- a/scripts/dataset_curation/clean_raw_metadata.Rmd
+++ b/scripts/dataset_curation/clean_raw_metadata.Rmd
@@ -5,7 +5,7 @@ output: html_document
 date: "`r Sys.Date()`"
 ---
 
-Note:
+Notes:
 
 1.  Received new data on 03/20/25
 
@@ -77,7 +77,7 @@ metadata$isolate_id_recode <- gsub(pattern = "Petstool",replacement = "Pet Stool
 metadata$household_number_recode <- recode(metadata$household_number,'49h' = '49H')
 ```
 
-# Edit specific isolates with coding differences
+# Edit specific isolates with coding differences in the platemap
 
 ## Specifically to enable proper merging with metadata
 
