--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
@@ -5,14 +5,13 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-
 ```{r setup, include=FALSE}
 require(knitr)
 opts_knit$set(echo = T,warning = FALSE, message = FALSE,error=F,comment=NA) 
 opts_chunk$set(echo = T,warning = FALSE, message = FALSE,error=F,comment=NA)
 opts_knit$set(root.dir='~/Desktop/gl_merlin/')
 ```
-
+ 
 # Environment
 
 ```{r environment, echo=T, message=FALSE, include=T, results=T}
@@ -27,9 +26,8 @@ set.seed(45)
 Sys.info()
 sessionInfo()
 ```
-
-# Update - changed from 30 to 25 SNP threshold
-
+ 
+# Load data and restrict to isolates from index subject
 ```{r}  
 # Overall dataset
 df <- readRDS("/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS")
