--- a/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data_index_cohort.Rmd
+++ b/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data_index_cohort.Rmd
@@ -21,6 +21,9 @@ packages <- c("tidyverse",'kableExtra')
 #Load Packages
 invisible(lapply(packages,library,character.only=T,quietly=T))
 
+# Load functions
+source("./scripts/ESBL_plasmids/ESCrE_plasmid_location_functions.R")
+
 # Print environment
 set.seed(45) 
 Sys.info()
@@ -35,8 +38,11 @@ amrfinder <- readRDS("./data/amrfinder/amrfinder_cleaned.RDS")  %>% subset(eleme
 ESCrE_genotype_info <- readRDS("./data/amrfinder/beta_lactamase_summary_MERLIN_cohort.RDS")  %>% subset(element_symbol_renamed %in% colnames(amrfinder_mat))
 mobsuite_gene_pres <- readRDS("./data/ESBL_plasmids/amrfinder_mobsuite_beta_lactamase_presence.RDS") %>% subset(genomic_id %in% df$genomic_id) 
 ESCrE_plasmid_clusters <- readRDS("./data/ESBL_plasmids/amrfinder_ESCrE_contig_matrix.RDS") %>% subset(rownames(.) %in% df$genomic_id) %>% select_if(colSums(.)>0) 
+
+paste0("Total tested genomes: ",nrow(df))
 ```
 
+# Merge
 ```{r}
 df <- left_join(df,amrfinder_mat %>% mutate(genomic_id = rownames(.))) %>% left_join(ESCrE_plasmid_clusters %>% mutate(genomic_id=rownames(.)))
 ``` 
@@ -55,52 +61,19 @@ escre_genotypes$element_symbol_renamed %>% sort
 
 # Get BLA and ESBL data on plasmids and chromosome
 ```{r,fig.width=10}
-get_ESCrE_genes_data <- function(isolate,mobsuite_gene_pres,bla_genes,ESCrE_genes){
-  mobsuite_df <- subset(mobsuite_gene_pres,genomic_id == isolate)
-  plasmids_str <- mobsuite_df$type %>% subset(. != 'chromosome')  %>% paste0(collapse=';')  %>% {ifelse(is_empty(.)==T,"",.)}  
-  bla_genes_str <- mobsuite_df %>% select(bla_genes) %>% select_if(colSums(.)==1) %>% colnames() %>% paste0(collapse=';')
-  ESCrE_genes_str <- mobsuite_df %>% select(ESCrE_genes) %>% select_if(colSums(.)==1) %>% colnames() %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)}
-  bla_chromosome_genes <-  mobsuite_df %>% subset(type=='chromosome') %>% select(bla_genes) %>% select_if(colSums(.)==1)  %>% colnames() %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)}
-  ESCrE_chromosome_genes <-  mobsuite_df %>% subset(type=='chromosome') %>% select(ESCrE_genes) %>% select_if(colSums(.)==1)  %>% colnames() %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)}
-  ESCrE_plasmid_genes <- mobsuite_df %>% subset(type!='chromosome') %>% select(ESCrE_genes) %>% select_if(colSums(.)==1)  %>% colnames() %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)}
-  bla_plasmids <- subset(mobsuite_df,BETA_LACTAM_contig ==1) %>% .$type %>% subset(. != 'chromosome') %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)}
-  ESCrE_plasmids <- subset(mobsuite_df,ESCrE_contig ==1) %>% .$type %>% subset(. != 'chromosome') %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)}
-     
-  results <- cbind.data.frame(genomic_id = isolate,plasmids=plasmids_str,bla_genes=bla_genes_str,ESCrE_genes=ESCrE_genes_str,bla_chromosome_genes=bla_chromosome_genes,ESCrE_chromosome_genes=ESCrE_chromosome_genes,ESCrE_plasmid_genes=ESCrE_plasmid_genes,bla_plasmids=bla_plasmids,ESCrE_plasmids = ESCrE_plasmids)
-  return(results)
-}
-
 plasmid_data <- lapply(df$genomic_id,get_ESCrE_genes_data,mobsuite_gene_pres,bla_genes,ESCrE_genes) %>% do.call(rbind,.) 
 ```
 
 # Plasmidic ESBL
 ```{r}
-analyze_frequency_on_plasmid <- function(ESCrE,plasmid_data){
-  chromosome_ESCrE <- str_split(string = plasmid_data$ESCrE_chromosome_genes,';') %>% unlist %>% subset(.==ESCrE)
-  plasmid_ESCrE <- str_split(string = plasmid_data$ESCrE_plasmid_genes,';') %>% unlist %>% subset(.==ESCrE)
-  n_chromosome <- length(chromosome_ESCrE)
-  n_plasmid <- length(plasmid_ESCrE)
-  prop_plasmid <-  round(n_plasmid / (n_chromosome + n_plasmid) * 100 , 2)
-  results <- cbind.data.frame(ESCrE,n_chromosome,n_plasmid,prop_plasmid)
-  return(results)
-}
-
 ESCrE_prop_data <- lapply(ESCrE_genes,analyze_frequency_on_plasmid,plasmid_data) %>% do.call(rbind,.) %>% arrange(prop_plasmid,n_plasmid) 
  
 ESCrE_prop_data %>% arrange(prop_plasmid) %>% gontjesr::favorite_kable()
 plasmidic_ESCrEs <- subset(ESCrE_prop_data,prop_plasmid>0) %>% .$ESCrE %>% sort
 
-saveRDS(ESCrE_prop_data,"./data/ESBL_plasmids/MERLIN_ESCrE_proportion_plasmidic.RDS")
+saveRDS(ESCrE_prop_data,"./data/ESBL_plasmids/MERLIN_index_cohort_ESCrE_proportion_plasmidic.RDS")
 
-get_plasmidic_ESBSL <-  function(isolate,mobsuite_gene_pres,ESCrE_plasmidic_genes){
-  mobsuite_df <- subset(mobsuite_gene_pres,genomic_id == isolate)
-  ESCrE_plasmidic_genes_str <- mobsuite_df %>% select(ESCrE_plasmidic_genes) %>% select_if(colSums(.)==1) %>% colnames() %>% paste0(collapse=";") %>% {ifelse(length(.)==0,"",.)} 
-     
-  results <- cbind.data.frame(genomic_id = isolate,ESCrE_plasmidic_genes=ESCrE_plasmidic_genes_str)
-  return(results)
-}
-
-ESCrE_plasmidic_presence <- lapply(df$genomic_id,get_plasmidic_ESBSL,mobsuite_gene_pres,plasmidic_ESCrEs) %>% do.call(rbind,.)
+ESCrE_plasmidic_presence <- lapply(df$genomic_id,get_plasmidic_ESCrE,mobsuite_gene_pres,plasmidic_ESCrEs) %>% do.call(rbind,.)
 ```
 
 # Save overall data
