--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.Rmd
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.Rmd
@@ -39,12 +39,12 @@ plasmid_data <- readRDS("./data/ESBL_plasmids/MERLIN_index_cohort_beta_lactam_lo
 df_index <- left_join(df_index,plasmid_data)
 ```
 
+# Get list of index positive households
 ```{r}
 ESCrE_index_positive_households <- df_index %>% subset(visit ==0 & WGS_escre==T) %>% .$household
 paste0("Number of subjects with index specimens positive: ", length(ESCrE_index_positive_households))
 paste0("Proportion of subjects with index specimens positive: ", length(ESCrE_index_positive_households) / 40)
 ```
-
 
 # Three case patients had episode of shraing ESBL plasmidic genes
 
@@ -91,12 +91,9 @@ lapply(not_plasmid_linked_ESCrE_,FUN=function(x){
 same_ESCrE_species_not_same_strain_no_ESBL_sharing <- prolonged_colonization_df %>% subset(index_at_1_and_or_2_Species_ST_cluster==0 & index_at_1_and_or_2_ESCrE_genes==0 &index_at_1_and_or_2_Species==1) %>% .$household
 
 lapply(same_ESCrE_species_not_same_strain_no_ESBL_sharing,FUN=function(x){
-  
   df_index %>% subset(household==x) %>% select(household,genomic_id,Species_ST_cluster,visit,plasmids,bla_genes,ESCrE_genes,ESCrE_plasmidic_genes,  bla_chromosome_genes,ESCrE_chromosome_genes,ESCrE_plasmid_genes,bla_plasmids,ESCrE_plasmids) %>% arrange(visit)   
 }) %>% lapply(.,gontjesr::favorite_kable)
 ```
-
-
 
 ## Example cases explained by ESCrE but not strain
 ### Novel strain acquisition:
